<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:paddingTop="16dp">

        <EditText
          android:id="@+id/add_text"
          android:layout_width="375dp"
          android:layout_height="wrap_content"
          android:hint="Title"
          android:maxLines="1"/>

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:orientation="horizontal">

            <Button
              android:id="@+id/save_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="14dp"
              android:text="Save"/>

            <Button
              android:id="@+id/clear_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="14dp"
              android:text="Clear"/>

        </LinearLayout>



        <ListView
          android:id="@android:id/list"
          android:layout_width="match_parent"
          android:layout_height="match_parent"></ListView>

    </LinearLayout>

</LinearLayout>